day1: html paragraph,formatting,styles

--- a/day1/html-headings.htm
+++ b/day1/html-headings.htm
@@ -2,7 +2,7 @@
 <html>
     <head><title>HTML headings</title></head>
     <body>
-        <h1>Sanyam</h1>
+        <h1 style="font-size: 60px" >Sanyam</h1>
         <h2>Yash</h2>
         <h3>shreya</h3>
         <h4>vicky</h4>
