day4: do some changes

--- a/day4/project1.html
+++ b/day4/project1.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Silver Medalist: Saikhom Mirabai Chanu</title>
     <link rel="stylesheet" href="s2.css">
 </head>
@@ -16,12 +17,22 @@
         Commonwealth Games. She was awarded the Padma Shri by the Government of India for her contributions to the
         sport.
         She was awarded Rajiv Gandhi Khel Ratna award by the Government of India in 2018.
+        <b>She won silver medal in Tokyo-olympics 2021.</b>
     </p>
-    Click on the below links to know more about her life..<br><br>
+    <marquee>
+    <img src="/day4/pic1.jfif" id="img201"">
+    <img src=" /day4/pic2.jfif" id="img201"">
+    <img src=" /day4/pic3.jpg" id="img201"">
+    <img src=" /day4/pic4.jpeg" id="img201"">
+    <img src=" /day4/pic5.jpg" id="img201"">
+    </marquee>
+    <br><br>
+    <hr>
+    <br>Click on the below links to know more about her life..<br>
     <ul>
-        <li><a id="i05" href="early-life.html">Early Life of Saikhom Mirabai Chanu</li> </a><br><br>
-        <li><a id="i05" href="career.html">Career</a></li><br><br>
-        <li><a id="i05" href="awards.html">Awards</a></li><br><br>
+        <li><a href=" early-life.html">Early Life of Saikhom Mirabai Chanu</li> </a><br>
+    <li><a href="career.html">Career</a></li><br>
+    <li><a href="awards.html">Awards</a></li><br>
     </ul>
 
 </body>
