day5:done some changes in the project

--- a/day4/project1.html
+++ b/day4/project1.html
@@ -19,7 +19,7 @@
         She was awarded Rajiv Gandhi Khel Ratna award by the Government of India in 2018.
         <b>She won silver medal in Tokyo-olympics 2021.</b>
     </p>
-    <marquee>
+    <marquee behavior="scrol">
     <img src="/day4/pic1.jfif" id="img201"">
     <img src=" /day4/pic2.jfif" id="img201"">
     <img src=" /day4/pic3.jpg" id="img201"">
