day5: done some changes

--- a/day4/project1.html
+++ b/day4/project1.html
@@ -19,22 +19,25 @@
         She was awarded Rajiv Gandhi Khel Ratna award by the Government of India in 2018.
         <b>She won silver medal in Tokyo-olympics 2021.</b>
     </p>
-    <marquee behavior="scrol">
-    <img src="/day4/pic1.jfif" id="img201"">
-    <img src=" /day4/pic2.jfif" id="img201"">
-    <img src=" /day4/pic3.jpg" id="img201"">
-    <img src=" /day4/pic4.jpeg" id="img201"">
-    <img src=" /day4/pic5.jpg" id="img201"">
-    </marquee>
-    <br><br>
-    <hr>
-    <br>Click on the below links to know more about her life..<br>
-    <ul>
-        <li><a href=" early-life.html">Early Life of Saikhom Mirabai Chanu</li> </a><br>
-    <li><a href="career.html">Career</a></li><br>
-    <li><a href="awards.html">Awards</a></li><br>
-    </ul>
-
+    <div id="sam">
+        <marquee behavior="scrol">
+            <img src="/day4/pic1.jfif" id="img201""> 
+            <img src=" /day4/pic2.jfif" id="img201""> 
+            <img src=" /day4/pic3.jpg" id="img201""> 
+            <img src=" /day4/pic4.jpeg" id="img201""> 
+            <img src=" /day4/pic5.jpg" id="img201""> 
+        </marquee>
+    </div>
+    <br>
+    <div class=" sj">
+            <br>Click on the below links to know more about her life..<br>
+            <ul>
+                <li><a href=" early-life.html">Early Life of Saikhom Mirabai Chanu</a></li> <br>
+                <li><a href="career.html">Career </a></li><br>
+                <li><a href="awards.html">Awards </a></li><br>
+            </ul>
+    </div>
+    <br>
 </body>
 
 </html>
