--- a/drum-project/drum.html
+++ b/drum-project/drum.html
@@ -63,8 +63,8 @@
         if (!audio) return;
         audio.currentTime = 0;
         audio.play();
-        console.log(key);
-        // key.classList.add('playing');
+        // console.log(key);
+         key.classList.add('playing');
     });
 
 </script>
