--- a/calculator-project/main.html
+++ b/calculator-project/main.html
@@ -10,39 +10,39 @@
 <body>
     <h1>Sanyam's Calculator</h1>
     <table>
-    <tr>
-    <th colspan="4" style="text-align: right;" id="inputBar">-5</th>
-    </tr>
-    <tr>
-        <td><button id="buttonType1" onclick="func11()">AC</button></td>
-        <td><button id="buttonType1" onclick="func12()">+/-</button></td>
-        <td><button id="buttonType1" onclick="func13()">%</button></td>
-        <td><button id="buttonType1" onclick="func14()">/</button></td>
-    </tr>
-    <tr>
-        <td><button id="buttonType1">7</button></td>
-        <td><button id="buttonType1">8</button></td>
-        <td><button id="buttonType1">9</button></td>
-         <td><button id="buttonType1" onclick="func24()">X</button></td>
-    </tr>
-    <tr>
-        <td><button id="buttonType1">4</button></td>
-        <td><button id="buttonType1">5</button></td>
-        <td><button id="buttonType1">6</button></td>
-         <td><button id="buttonType1">-</button></td>
-    </tr>
-    <tr>
-         <td><button id="buttonType1">1</button></td>
-         <td><button id="buttonType1">2</button></td>
-         <td><button id="buttonType1">3</button></td>
-         <td><button id="buttonType1">+</button></td>
-    </tr>
-    <tr>
-        <th colspan="2"><button id="buttonType2">0</button></th>
-        <td><button id="buttonType1">.</button></td>
-        <td><button id="buttonType1">=</button></td>
+        <tr>
+            <th colspan="4" style="text-align: right;" id="inputBar"></th>
+        </tr>
+        <tr>
+            <td><button id="bAC" onclick="ID(this.id)">AC</button></td>
+            <td><button id="bSign" class="op" onclick="ID(this.id)">+/-</button></td>
+            <td><button id="bPercent" class="op" onclick="ID(this.id)">%</button></td>
+            <td><button id="bDivide" class="op" onclick="ID(this.id)">/</button></td>
+        </tr>
+        <tr>
+            <td><button id="b7"  class="num" onclick="ID(this.id)">7</button></td>
+            <td><button id="b8"  class="num" onclick="ID(this.id)">8</button></td>
+            <td><button id="b9"  class="num" onclick="ID(this.id)">9</button></td>
+            <td><button id="bMultiply" class="op" onclick="ID(this.id)">X</button></td>
+        </tr>
+        <tr>
+            <td><button id="b4" class="num" onclick="ID(this.id)">4</button></td>
+            <td><button id="b5" class="num" onclick="ID(this.id)">5</button></td>
+            <td><button id="b6" class="num" onclick="ID(this.id)">6</button></td>
+            <td><button id="bMinus" class="op" onclick="ID(this.id)">-</button></td>
+        </tr>
+        <tr>
+            <td><button id="b1" class="num" onclick="ID(this.id)">1</button></td>
+            <td><button id="b2" class="num" onclick="ID(this.id)">2</button></td>
+            <td><button id="b3" class="num" onclick="ID(this.id)">3</button></td>
+            <td><button id="bPlus" class="op" onclick="ID(this.id)">+</button></td>
+        </tr>
+        <tr>
+            <th colspan="2"><button id="b0" onclick="ID(this.id)">0</button></th>
+            <td><button id="bPoint" onclick="ID(this.id)">.</button></td>
+            <td><button id="bEqual" onclick="ID(this.id)">=</button></td>
 
-    </tr>
+        </tr>
 
     </table>
 
