--- a/calculator-project/main.html
+++ b/calculator-project/main.html
@@ -11,7 +11,7 @@
     <h1>Sanyam's Calculator</h1>
     <table>
         <tr>
-            <th colspan="4" style="text-align: right;" id="inputBar"></th>
+            <th colspan="4" style="text-align: right;" id="inputBar">0</th>
         </tr>
         <tr>
             <td><button id="bAC" onclick="ID(this.id)">AC</button></td>
