--- a/day4/project1.html
+++ b/day4/project1.html
@@ -21,7 +21,7 @@
     </p>
     <div id="sam">
         <marquee behavior="scrol">
-            <img src="/day4/pic1.jfif" id="img201""> 
+            <img src="\day4\pic1.jfif" id="img201""> 
             <img src=" /day4/pic2.jfif" id="img201""> 
             <img src=" /day4/pic3.jpg" id="img201""> 
             <img src=" /day4/pic4.jpeg" id="img201""> 
