day10: now my calculator is also working with keyboard keys

--- a/calculator-project/main.html
+++ b/calculator-project/main.html
@@ -15,36 +15,59 @@
         </tr>
         <tr>
             <td><button id="bAC" onclick="ID(this.id)">AC</button></td>
+
             <td><button id="bSign" class="op" onclick="ID(this.id)">+/-</button></td>
+
             <td><button id="bPercent" class="op" onclick="ID(this.id)">%</button></td>
-            <td><button id="bDivide" class="op" onclick="ID(this.id)">/</button></td>
+
+            <td><button id="bDivide" class="op" onclick="ID(this.id)" data-key="191">/</button></td>
+            
         </tr>
         <tr>
-            <td><button id="b7"  class="num" onclick="ID(this.id)">7</button></td>
-            <td><button id="b8"  class="num" onclick="ID(this.id)">8</button></td>
-            <td><button id="b9"  class="num" onclick="ID(this.id)">9</button></td>
+
+            <td><button id="b7" class="num" onclick="ID(this.id)" data-key="55"> 7</button></td>
+
+            <td><button id="b8" class="num" onclick="ID(this.id)" data-key="56">8</button></td>
+
+            <td><button id="b9" class="num" onclick="ID(this.id)" data-key="57">9</button></td>
+
             <td><button id="bMultiply" class="op" onclick="ID(this.id)">X</button></td>
+
         </tr>
         <tr>
-            <td><button id="b4" class="num" onclick="ID(this.id)">4</button></td>
-            <td><button id="b5" class="num" onclick="ID(this.id)">5</button></td>
-            <td><button id="b6" class="num" onclick="ID(this.id)">6</button></td>
-            <td><button id="bMinus" class="op" onclick="ID(this.id)">-</button></td>
+
+            <td><button id="b4" class="num" onclick="ID(this.id)" data-key="52">4</button></td>
+
+            <td><button id="b5" class="num" onclick="ID(this.id)" data-key="53">5</button></td>
+
+            <td><button id="b6" class="num" onclick="ID(this.id)" data-key="54">6</button></td>
+
+            <td><button id="bMinus" class="op" onclick="ID(this.id)" data-key="189">-</button></td>
+
         </tr>
         <tr>
-            <td><button id="b1" class="num" onclick="ID(this.id)">1</button></td>
-            <td><button id="b2" class="num" onclick="ID(this.id)">2</button></td>
-            <td><button id="b3" class="num" onclick="ID(this.id)">3</button></td>
+
+            <td><button id="b1" class="num" onclick="ID(this.id) " data-key="49">1</button></td>
+
+            <td><button id="b2" class="num" onclick="ID(this.id)" data-key="50">2</button></td>
+
+            <td><button id="b3" class="num" onclick="ID(this.id)" data-key="51">3</button></td>
+
             <td><button id="bPlus" class="op" onclick="ID(this.id)">+</button></td>
+
         </tr>
         <tr>
-            <th colspan="2"><button id="b0" onclick="ID(this.id)">0</button></th>
-            <td><button id="bPoint" onclick="ID(this.id)">.</button></td>
-            <td><button id="bEqual" onclick="ID(this.id)">=</button></td>
+
+            <th colspan="2"><button id="b0" onclick="ID(this.id)" data-key="48">0</button></th>
+
+            <td><button id="bPoint" onclick="ID(this.id)" data-key="191">.</button></td>
+
+            <td><button id="bEqual" onclick="ID(this.id)"  data-key="187">=</button></td>
 
         </tr>
-
+        
     </table>
+    <button data-key="8" id="backspace"></button>
 
 </body>
 
