day11: working on project-Shopping Site

--- a/calculator-project/main.html
+++ b/calculator-project/main.html
@@ -16,12 +16,13 @@
         <tr>
             <td><button id="bAC" onclick="ID(this.id)">AC</button></td>
 
-            <td><button data-key="8" id="backspace" class="op" onclick="ID(this.id)"> <img src="/calculator-project/backspace.png" id="img-bs"> </button></td>
+            <td><button data-key="8" id="backspace" class="op" onclick="ID(this.id)"> <img src="backspace.png"
+                        id="img-bs"> </button></td>
 
             <td><button id="bPercent" class="op" onclick="ID(this.id)">%</button></td>
 
             <td><button id="bDivide" class="op" onclick="ID(this.id)" data-key="191">/</button></td>
-            
+
         </tr>
         <tr>
 
@@ -63,10 +64,10 @@
 
             <td><button id="bPoint" onclick="ID(this.id)" data-key="191">.</button></td>
 
-            <td><button id="bEqual" onclick="ID(this.id)"  data-key="187">=</button></td>
+            <td><button id="bEqual" onclick="ID(this.id)" data-key="187">=</button></td>
 
         </tr>
-        
+
     </table>
 
 </body>
