day12: controling css variables using js

--- a/project-shopping-site/main.html
+++ b/project-shopping-site/main.html
@@ -37,12 +37,13 @@
     <br>
     <h2>My-Cart <img src="cart.png" id="cart"></h2>
     <div id="cartDiv">
-        <ul id="MyCart">
-            <li></li>
+        <table>
 
-        </ul>
+
+
+        </table>
     </div>
-
+    
 
 
 
