day13: done flex and transition in privious project

--- a/day4/project1.html
+++ b/day4/project1.html
@@ -11,33 +11,34 @@
     <h1 id="i01">Silver Medalist: Saikhom Mirabai Chanu </h1>
     <img src="Saikhom_Mirabai_Chanu.jpg" alt="Saikhom Mirabai Chanu" id="img01">
     <p id="i03">
-        Saikhom Mirabai Chanu (born 8 August 1994) is an Indian weightlifter. She won the silver medal at the 2020
-        Summer
-        Olympics in Women's 49 kg.Mirabai Chanu has won the World Championships and multiple medals at the
-        Commonwealth Games. She was awarded the Padma Shri by the Government of India for her contributions to the
-        sport.
-        She was awarded Rajiv Gandhi Khel Ratna award by the Government of India in 2018.
+        Saikhom Mirabai Chanu (born 8 August 1994) is an Indian weightlifter. She won the silver medal at the 2020 Summer Olympics in Women's 49 kg.Mirabai Chanu has won the World Championships and multiple medals at the Commonwealth Games. She was awarded the
+        Padma Shri by the Government of India for her contributions to the sport. She was awarded Rajiv Gandhi Khel Ratna award by the Government of India in 2018.
         <b>She won silver medal in Tokyo-olympics 2021.</b>
     </p>
     <div id="sam">
-        <marquee behavior="scrol">
-            <img src="\day4\pic1.jfif" id="img201""> 
-            <img src=" /day4/pic2.jfif" id="img201""> 
-            <img src=" /day4/pic3.jpg" id="img201""> 
-            <img src=" /day4/pic4.jpeg" id="img201""> 
-            <img src=" /day4/pic5.jpg" id="img201""> 
-        </marquee>
+        <!-- <marquee behavior="scrol"> -->
+        <img src="\day4\pic1.jfif" id="img201" onmouseover="u()" class="panel">
+        <img src=" /day4/pic2.jfif" id="img201" class="panel">
+        <img src=" /day4/pic3.jpg" id="img201" class="panel">
+        <img src=" /day4/pic4.jpeg" id="img201" class="panel">
+        <img src=" /day4/pic5.jpg" id="img201" class="panel">
+        <img src=" /day4/pic6.jpg" id="img201" class="panel">
+        <img src=" /day4/pic7.jpg" id="img201" class="panel">
+        <img src=" /day4/pic8.jpg" id="img201" class="panel">
+        <!-- <img src="Saikhom_Mirabai_Chanu.jpg" id="img201" class="panel"> -->
+        <!-- </marquee> -->
     </div>
     <br>
-    <div class=" sj">
-            <br>Click on the below links to know more about her life..<br>
-            <ul>
-                <li><a href=" early-life.html">Early Life of Saikhom Mirabai Chanu</a></li> <br>
-                <li><a href="career.html">Career </a></li><br>
-                <li><a href="awards.html">Awards </a></li><br>
-            </ul>
+    <div class=" sj ">
+        <br>Click on the below links to know more about her life..<br>
+        <ul>
+            <li><a href=" early-life.html ">Early Life of Saikhom Mirabai Chanu</a></li> <br>
+            <li><a href="career.html ">Career </a></li><br>
+            <li><a href="awards.html ">Awards </a></li><br>
+        </ul>
     </div>
     <br>
 </body>
+<script src="javascript.js"></script>
 
 </html>
