--- a/day4/project1.html
+++ b/day4/project1.html
@@ -16,17 +16,14 @@
         <b>She won silver medal in Tokyo-olympics 2021.</b>
     </p>
     <div id="sam">
-        <!-- <marquee behavior="scrol"> -->
-        <img src="\day4\pic1.jfif" id="img201" onmouseover="u()" class="panel">
-        <img src=" /day4/pic2.jfif" id="img201" class="panel">
-        <img src=" /day4/pic3.jpg" id="img201" class="panel">
-        <img src=" /day4/pic4.jpeg" id="img201" class="panel">
-        <img src=" /day4/pic5.jpg" id="img201" class="panel">
-        <img src=" /day4/pic6.jpg" id="img201" class="panel">
-        <img src=" /day4/pic7.jpg" id="img201" class="panel">
-        <img src=" /day4/pic8.jpg" id="img201" class="panel">
-        <!-- <img src="Saikhom_Mirabai_Chanu.jpg" id="img201" class="panel"> -->
-        <!-- </marquee> -->
+        <img src="pic1.jfif" id="img201" onmouseover="u()" class="panel">
+        <img src="pic2.jfif" id="img201" class="panel">
+        <img src="pic3.jpg" id="img201" class="panel">
+        <img src="pic4.jpeg" id="img201" class="panel">
+        <img src="pic5.jpg" id="img201" class="panel">
+        <img src="pic6.jpg" id="img201" class="panel">
+        <img src="pic7.jpg" id="img201" class="panel">
+        <img src="pic8.jpg" id="img201" class="panel">
     </div>
     <br>
     <div class=" sj ">
