day14: city population search box

--- a/project-shopping-site/main.html
+++ b/project-shopping-site/main.html
@@ -4,6 +4,7 @@
 <head>
     <title>My Shopping Site</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/eda23c418b.js" crossorigin="anonymous"></script>
     <script src="script.js"></script>
 </head>
 
@@ -35,7 +36,7 @@
         </ul>
     </div>
     <br>
-    <h2>My-Cart <img src="cart.png" id="cart"></h2>
+    <h2>My-Cart <i class="fas fa-shopping-cart"></i></h2>
     <div id="cartDiv">
         <table>
 
@@ -43,7 +44,7 @@
 
         </table>
     </div>
-    
+
 
 
 
